# dioscuri

./: Cargo.toml
src/: app.rs  main.rs  validation.rs
src/gemini/: gemtext.rs  mod.rs  response.rs
src/ui/: event.rs  input.rs  key.rs  mod.rs
