[package]
name = "gem"
version = "0.1.0"
authors = ["Aoife <aoifeebradley@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustls = { version = "0.19.1", features = ["dangerous_configuration"]}
tokio = { version = "1.5.0", features = ["full"]}
webpki = "0.22.0"
x509-parser = "0.9.2"