[package]
name = "dioscuri"
version = "0.1.0"
authors = ["Aoife <aoifeebradley@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustls = { version = "0.19.1", features = ["dangerous_configuration"]}
webpki = "0.21.4"
x509-parser = { version = "0.9.2", features = ["verify"]}
anyhow = '1.0.40'
ring = "0.16.20"
directories-next = "2.0.0"
lazy_static = "1.4.0"
data-encoding = "2.3.2"
env_logger = "0.8.3"
log = "0.4.14"
pancurses = "0.16.1"
crossbeam-channel = "0.5.1"

[dependencies.cursive]
version = "0.16"
default-features = false
features = ["crossterm-backend"]
